--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -9,6 +9,7 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="parent"
+    android:layout_marginBottom="16dp"
     android:background="@color/main_background_color"
     tools:context=".ui.finishedPartnerGameDetail.FinishedPartnerGameDetailFragment">
 
@@ -41,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="16dp"
                     android:layout_toEndOf="@+id/goToFinishedGameViewFragment"
                     android:text="@string/game_detail"
                     android:textColor="@color/toolbar_text_color"
@@ -50,13 +51,13 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <View
-            android:id="@+id/toolbarAndTeamsSeparator"
-            style="@style/HorizontalSeparatorStyle"
-            android:layout_margin="0dp"
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/toolbarAndTeamsDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolBar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolBar"
+            android:layout_marginTop="0dp"
+            style="@style/DividerStyle"/>
 
         <TextView
             android:id="@+id/teamNames"
@@ -64,7 +65,7 @@
             android:text="@string/teams"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolBar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbarAndTeamsDivider" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -88,13 +89,15 @@
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/team1Name" />
 
-        <View
-            android:id="@+id/partnerColumnSeparator"
-            style="@style/VerticalSeparatorStyle"
-            app:layout_constraintBottom_toTopOf="@+id/partnerAndRecyclerViewRowSeparator"
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/partnerColumnDivider"
+            android:layout_width="0.5dp"
+            android:layout_height="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/partnerAndRecyclerViewRowDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
+            app:layout_constraintTop_toBottomOf="@+id/teamNames"
+            style="@style/DividerStyle"/>
 
         <ImageView
             android:id="@+id/imageView2"
@@ -118,14 +121,13 @@
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toBottomOf="@+id/team2Name" />
 
-        <View
-            android:id="@+id/partnerAndRecyclerViewRowSeparator"
-            style="@style/HorizontalSeparatorStyle"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/partnerAndRecyclerViewRowDivider"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/partnerColumnSeparator" />
+            android:layout_marginTop="26dp"
+            app:layout_constraintTop_toBottomOf="@+id/partnerColumnDivider"
+            style="@style/DividerStyle"/>
 
         <TextView
             android:id="@+id/roundLabel"
@@ -133,17 +135,22 @@
             android:text="@string/round_scores"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/partnerAndRecyclerViewRowSeparator" />
-
+            app:layout_constraintTop_toBottomOf="@+id/partnerAndRecyclerViewRowDivider" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/roundRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_margin="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/roundLabel" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/detailLabelRecyclerViewRowDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView"
+            style="@style/DividerStyle"/>
 
         <TextView
             android:id="@+id/detailLabel"
@@ -151,7 +158,7 @@
             android:text="@string/detail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/roundRecyclerView" />
+            app:layout_constraintTop_toBottomOf="@+id/detailLabelRecyclerViewRowDivider" />
 
         <TextView
             android:id="@+id/gameDetail"
@@ -168,5 +175,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gameDetail" />
 
+        <com.google.android.material.divider.MaterialDivider
+            android:id="@+id/gameDateDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/gameDate"
+            style="@style/DividerStyle"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
