--- a/app/src/main/res/layout/partner_game_round_item.xml
+++ b/app/src/main/res/layout/partner_game_round_item.xml
@@ -20,9 +20,11 @@
             tools:ignore="DuplicateSpeakableTextCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <include
-        android:id="@+id/vertical_separator"
-        layout="@layout/vertical_separator" />
+
+    <com.google.android.material.divider.MaterialDivider
+        style="@style/DividerStyle"
+        android:layout_width="0.3dp"
+        android:layout_height="30dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/NameTextInputLayoutStyle"
