--- a/app/src/main/res/layout/single_game_round_item.xml
+++ b/app/src/main/res/layout/single_game_round_item.xml
@@ -15,7 +15,10 @@
                     style="@style/ScoreTextInputEditTextStyle"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <include layout="@layout/vertical_separator" />
+        <com.google.android.material.divider.MaterialDivider
+            style="@style/DividerStyle"
+            android:layout_width="0.3dp"
+            android:layout_height="30dp" />
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/NameTextInputLayoutStyle"
@@ -26,7 +29,10 @@
                     style="@style/ScoreTextInputEditTextStyle"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <include layout="@layout/vertical_separator" />
+        <com.google.android.material.divider.MaterialDivider
+            style="@style/DividerStyle"
+            android:layout_width="0.3dp"
+            android:layout_height="30dp" />
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/NameTextInputLayoutStyle"
@@ -37,7 +43,10 @@
                     style="@style/ScoreTextInputEditTextStyle"/>
         </com.google.android.material.textfield.TextInputLayout>
 
-        <include layout="@layout/vertical_separator" />
+        <com.google.android.material.divider.MaterialDivider
+            style="@style/DividerStyle"
+            android:layout_width="0.3dp"
+            android:layout_height="30dp" />
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/NameTextInputLayoutStyle"
