--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -23,7 +23,7 @@
     <color name="stroke_color">#45494A</color>
     <color name="main_background_color">#121212</color>
     <color name="button_text_color">#000000</color>
-    <color name="icon_color">#FFFFFF</color>
+    <color name="icon_color">#646E72</color>
     <color name="searchview_text_color">#FFFFFF</color>
     <color name="min_score_color">#8022D11B</color>
     <color name="max_score_color">#80FF0000</color>
@@ -41,11 +41,13 @@
     <color name="alert_dialog_button_text_color">#FFFFFF</color>
     <color name="text_input_layout_text_color">#FFFFFF</color>
     <color name="text_input_layout_hint_color">#FFFFFF</color>
-    <color name="text_input_layout_box_stroke_color">#FFFFFF</color>
+    <color name="text_input_layout_box_stroke_color">#4CAF50</color>
     <color name="text_input_layout_counter_text_color">#FFFFFF</color>
     <color name="cursor_color">#4CAF50</color>
     <color name="tablayout_text_color">#FFFFFF</color>
     <color name="back_icon_color">#FFFFFF</color>
     <color name="button_background_color">#424242</color>
+    <color name="divider_color">#45494A</color>
+    <color name="searchview_border_color">#45494A</color>
 
 </resources>
