--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,12 +41,14 @@
     <color name="alert_dialog_button_text_color">#000000</color>
     <color name="text_input_layout_text_color">#292F33</color>
     <color name="text_input_layout_hint_color">#292F33</color>
-    <color name="text_input_layout_box_stroke_color">#292F33</color>
+    <color name="text_input_layout_box_stroke_color">#4CAF50</color>
     <color name="text_input_layout_counter_text_color">#292F33</color>
-    <color name="cursor_color">#000000</color>
+    <color name="cursor_color">#4CAF50</color>
     <color name="tablayout_text_color">#292F33</color>
     <color name="back_icon_color">#000000</color>
     <color name="button_background_color">#E8E8E8</color>
-
+    <color name="divider_color">#45494A</color>
+    <color name="searchview_border_color">#45494A</color>
+    <color name="tab_indicator_color">#4CAF50</color>
 
 </resources>
