--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,7 @@
         <item name="android:textColor">@color/score_text_color</item>
         <item name="android:textColorHint">@color/score_text_color</item>
         <item name="android:inputType">numberSigned</item>
+
     </style>
 
     <style name="ButtonStyle" parent="@style/Widget.AppCompat.Button">
@@ -77,7 +78,7 @@
         <item name="android:textColor">@color/name_text_color</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_marginTop">13dp</item>
 
     </style>
 
@@ -88,7 +89,7 @@
         <item name="android:textColor">@color/score_text_color</item>
         <item name="android:textSize">11sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:layout_marginTop">1.5dp</item>
 
     </style>
 
@@ -151,11 +152,14 @@
         <item name="android:text">@string/date</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">13sp</item>
-        <item name="android:layout_marginTop">8dp</item>
         <item name="android:drawableLeft">@drawable/ic_calendar</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawablePadding">8dp</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+
     </style>
 
     <style name="TitleTextViewStyle" parent="Widget.AppCompat.TextView">
@@ -187,6 +191,17 @@
         <item name="android:gravity">center</item>
     </style>
 
+
+    <style name="DividerStyle" parent="Widget.MaterialComponents.MaterialDivider">
+        <item name="android:background">@color/separator_color</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="dividerThickness">0.3dp</item>
+        <item name="dividerColor">@color/divider_color</item>
+
+    </style>
+
     <style name="InfoTextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -197,7 +212,6 @@
         <item name="android:layout_marginTop">16dp</item>
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginEnd">8dp</item>
-        <item name="android:layout_marginBottom">8dp</item>
         <item name="android:drawablePadding">8dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawableLeft">@drawable/ic_trophy</item>
